--- a/Vinokurov_DS18/Итоговый проект DS18 Винокуров Т.Р..ipynb
+++ b/Vinokurov_DS18/Итоговый проект DS18 Винокуров Т.Р..ipynb
@@ -643,9 +643,9 @@
         "if results:\n",
         "    most_risky = results[0]\n",
         "    print(f\"\\nСамый рисковый тип локации: {most_risky[0]}\")\n",
-        "    print(f\"• VaR 95% в {most_risky[4]} раза больше медианы\")\n",
-        "    print(f\"• Медиана: {most_risky[2]} руб\")\n",
-        "    print(f\"• VaR 95%: {most_risky[3]} руб\")\n"
+        "    print(f\" VaR 95% в {most_risky[4]} раза больше медианы\")\n",
+        "    print(f\" Медиана: {most_risky[2]} руб\")\n",
+        "    print(f\" VaR 95%: {most_risky[3]} руб\")\n"
       ],
       "metadata": {
         "colab": {
