--- a/Vinokurov_DS18/Итоговый проект DS18 Винокуров Т.Р..ipynb
+++ b/Vinokurov_DS18/Итоговый проект DS18 Винокуров Т.Р..ipynb
@@ -729,7 +729,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Расчет VaR для всей совокупности работ показал, что с вероятностью 95% затраты не превысят 325,000 руб., а с вероятностью 99% - 356,700 руб. Однако более детальный анализ по типам работ выявил существенные различия: работы по кровле имеют наибольший коэффициент риска (4,5), что означает, что VaR 95% для этого типа работ в 4,5 раза превышает медианную стоимость. В противоположность этому, работы по водостокам демонстрируют минимальный коэффициент риска (1,2). Такая дифференциация позволяет разрабатывать адресные стратегии управления рисками для различных категорий работ."
+        "Расчет VaR для всей совокупности работ показал, что с вероятностью 95% затраты не превысят 325,000 руб., а с вероятностью 99% - 356,700 руб. Однако более детальный анализ по типам работ выявил существенные различия: работы по кровле имеют наибольший коэффициент риска (4,5), что означает, что VaR 95% для этого типа работ в 4,5 раза превышает медианную стоимость. В противоположность этому, работы по водостокам демонстрируют минимальный коэффициент риска (1,2). Такое различие позволяет разрабатывать уникальные стратегии управления рисками для различных категорий работ."
       ],
       "metadata": {
         "id": "9nTUciIInFQX"
